D-29533 Fixing misaligned Michael Aram text. Fixing linking for 'Rag & Bone' and 'Dresses & Rompers.

--- a/public/styles/projects/100-percent/spring-2016.scss
+++ b/public/styles/projects/100-percent/spring-2016.scss
@@ -613,6 +613,10 @@ video.window {
         background-size: cover;
         background-color: #c8c9cc;
         background-repeat: no-repeat;
+
+        img {
+            width: 100vw
+        }
     }
 
 }
